Ajout et implémentation des services, mappers et controllers pour les entités Devis (avec création, mise à jour, suppression), et mise à jour des tests correspondants. Correction des tests pour utiliser @MockitoBean, intégration des mocks JWT (JwtUtil et JwtAuthenticationFilter) dans tous les contrôleurs sécurisés, et ajustements du controller Devis et de ses tests pour lever les bonnes erreurs (400, 404, 409).