@@ -1,8 +1,8 @@
 package com.jlh.jlhautopambackend.controllers;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.jlh.jlhautopambackend.modeles.StatutRendezVous;
-import com.jlh.jlhautopambackend.repositories.StatutRendezVousRepository;
+import com.jlh.jlhautopambackend.dto.StatutRendezVousDto;
+import com.jlh.jlhautopambackend.services.StatutRendezVousService;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
@@ -14,7 +14,7 @@ import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
@@ -27,147 +27,88 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 @AutoConfigureMockMvc(addFilters = false)
 class StatutRendezVousControllerTest {
 
-    @Autowired
-    private MockMvc mvc;
-
-    @Autowired
-    private ObjectMapper objectMapper;
+    @Autowired MockMvc mvc;
+    @Autowired ObjectMapper objectMapper;
 
     @MockitoBean
-    private StatutRendezVousRepository statutRepo;
+    private StatutRendezVousService service;
 
-    @Test
-    @DisplayName("GET /api/statuts-rendezvous ➔ 200, json list")
+    // Mocks JWT si nécessaire
+    @MockitoBean private com.jlh.jlhautopambackend.utils.JwtUtil jwtUtil;
+    @MockitoBean private com.jlh.jlhautopambackend.config.JwtAuthenticationFilter jwtAuthenticationFilter;
+
+    @Test @DisplayName("GET /api/statut-rendezvous ➔ 200")
     void testGetAll() throws Exception {
-        StatutRendezVous s1 = StatutRendezVous.builder()
-                .codeStatut("A")
-                .libelle("Alpha")
-                .build();
-        StatutRendezVous s2 = StatutRendezVous.builder()
-                .codeStatut("B")
-                .libelle("Beta")
-                .build();
-        Mockito.when(statutRepo.findAll()).thenReturn(Arrays.asList(s1, s2));
+        StatutRendezVousDto d1 = StatutRendezVousDto.builder().codeStatut("X").libelle("One").build();
+        StatutRendezVousDto d2 = StatutRendezVousDto.builder().codeStatut("Y").libelle("Two").build();
+        Mockito.when(service.findAll()).thenReturn(List.of(d1,d2));
 
-        mvc.perform(get("/api/statuts-rendezvous").accept(MediaType.APPLICATION_JSON))
+        mvc.perform(get("/api/statut-rendezvous"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$[0].codeStatut").value("A"))
-                .andExpect(jsonPath("$[1].libelle").value("Beta"));
+                .andExpect(jsonPath("$[0].codeStatut").value("X"))
+                .andExpect(jsonPath("$[1].libelle").value("Two"));
     }
 
-    @Test
-    @DisplayName("GET /api/statuts-rendezvous/{code} ➔ 200 if exists")
+    @Test @DisplayName("GET /api/statut-rendezvous/{code} ➔ 200")
     void testGetByCodeFound() throws Exception {
-        StatutRendezVous s = StatutRendezVous.builder()
-                .codeStatut("X")
-                .libelle("Xray")
-                .build();
-        Mockito.when(statutRepo.findById("X")).thenReturn(Optional.of(s));
+        StatutRendezVousDto dto = StatutRendezVousDto.builder().codeStatut("Z").libelle("Zeta").build();
+        Mockito.when(service.findByCode("Z")).thenReturn(Optional.of(dto));
 
-        mvc.perform(get("/api/statuts-rendezvous/X").accept(MediaType.APPLICATION_JSON))
+        mvc.perform(get("/api/statut-rendezvous/Z"))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.libelle").value("Xray"));
+                .andExpect(jsonPath("$.libelle").value("Zeta"));
     }
 
-    @Test
-    @DisplayName("GET /api/statuts-rendezvous/{code} ➔ 404 if not found")
+    @Test @DisplayName("GET /api/statut-rendezvous/{code} ➔ 404")
     void testGetByCodeNotFound() throws Exception {
-        Mockito.when(statutRepo.findById("Z")).thenReturn(Optional.empty());
-
-        mvc.perform(get("/api/statuts-rendezvous/Z").accept(MediaType.APPLICATION_JSON))
-                .andExpect(status().isNotFound());
+        Mockito.when(service.findByCode("W")).thenReturn(Optional.empty());
+        mvc.perform(get("/api/statut-rendezvous/W")).andExpect(status().isNotFound());
     }
 
-    @Test
-    @DisplayName("POST /api/statuts-rendezvous ➔ 201 when new")
-    void testCreateSuccess() throws Exception {
-        StatutRendezVous in = StatutRendezVous.builder()
-                .codeStatut("C")
-                .libelle("Charlie")
-                .build();
-        StatutRendezVous saved = StatutRendezVous.builder()
-                .codeStatut("C")
-                .libelle("Charlie")
-                .build();
-        Mockito.when(statutRepo.existsById("C")).thenReturn(false);
-        Mockito.when(statutRepo.save(Mockito.any())).thenReturn(saved);
+    @Test @DisplayName("POST /api/statut-rendezvous ➔ 201")
+    void testCreate() throws Exception {
+        StatutRendezVousDto in = StatutRendezVousDto.builder().codeStatut("NEW").libelle("Nouveau").build();
+        Mockito.when(service.create(Mockito.any())).thenReturn(in);
 
-        mvc.perform(post("/api/statuts-rendezvous")
+        mvc.perform(post("/api/statut-rendezvous")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(in)))
                 .andExpect(status().isCreated())
-                .andExpect(header().string("Location", "/api/statuts-rendezvous/C"))
-                .andExpect(jsonPath("$.codeStatut").value("C"));
+                .andExpect(header().string("Location", "/api/statut-rendezvous/NEW"))
+                .andExpect(jsonPath("$.codeStatut").value("NEW"));
     }
 
-    @Test
-    @DisplayName("POST /api/statuts-rendezvous ➔ 409 when already exists")
-    void testCreateConflict() throws Exception {
-        StatutRendezVous in = StatutRendezVous.builder()
-                .codeStatut("D")
-                .libelle("Delta")
-                .build();
-        Mockito.when(statutRepo.existsById("D")).thenReturn(true);
+    @Test @DisplayName("PUT /api/statut-rendezvous/{code} ➔ 200")
+    void testUpdateFound() throws Exception {
+        StatutRendezVousDto in = StatutRendezVousDto.builder().libelle("Upd").build();
+        StatutRendezVousDto out = StatutRendezVousDto.builder().codeStatut("C").libelle("Upd").build();
+        Mockito.when(service.update(Mockito.eq("C"), Mockito.any())).thenReturn(Optional.of(out));
 
-        mvc.perform(post("/api/statuts-rendezvous")
+        mvc.perform(put("/api/statut-rendezvous/C")
                         .contentType(MediaType.APPLICATION_JSON)
                         .content(objectMapper.writeValueAsString(in)))
-                .andExpect(status().isConflict());
-    }
-
-    @Test
-    @DisplayName("PUT /api/statuts-rendezvous/{code} ➔ 200 when exists")
-    void testUpdateFound() throws Exception {
-        StatutRendezVous existing = StatutRendezVous.builder()
-                .codeStatut("E")
-                .libelle("Echo")
-                .build();
-        StatutRendezVous updates = StatutRendezVous.builder()
-                .libelle("EchoUpdated")
-                .build();
-        StatutRendezVous saved = StatutRendezVous.builder()
-                .codeStatut("E")
-                .libelle("EchoUpdated")
-                .build();
-        Mockito.when(statutRepo.findById("E")).thenReturn(Optional.of(existing));
-        Mockito.when(statutRepo.save(Mockito.any())).thenReturn(saved);
-
-        mvc.perform(put("/api/statuts-rendezvous/E")
-                        .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(updates)))
                 .andExpect(status().isOk())
-                .andExpect(jsonPath("$.libelle").value("EchoUpdated"));
+                .andExpect(jsonPath("$.libelle").value("Upd"));
     }
 
-    @Test
-    @DisplayName("PUT /api/statuts-rendezvous/{code} ➔ 404 if not found")
+    @Test @DisplayName("PUT /api/statut-rendezvous/{code} ➔ 404")
     void testUpdateNotFound() throws Exception {
-        StatutRendezVous updates = StatutRendezVous.builder()
-                .libelle("Nope")
-                .build();
-        Mockito.when(statutRepo.findById("F")).thenReturn(Optional.empty());
-
-        mvc.perform(put("/api/statuts-rendezvous/F")
+        Mockito.when(service.update(Mockito.eq("N"), Mockito.any())).thenReturn(Optional.empty());
+        mvc.perform(put("/api/statut-rendezvous/N")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(updates)))
+                        .content(objectMapper.writeValueAsString(StatutRendezVousDto.builder().libelle("N").build())))
                 .andExpect(status().isNotFound());
     }
 
-    @Test
-    @DisplayName("DELETE /api/statuts-rendezvous/{code} ➔ 204 when exists")
+    @Test @DisplayName("DELETE /api/statut-rendezvous/{code} ➔ 204")
     void testDeleteFound() throws Exception {
-        Mockito.when(statutRepo.existsById("G")).thenReturn(true);
-
-        mvc.perform(delete("/api/statuts-rendezvous/G"))
-                .andExpect(status().isNoContent());
+        Mockito.when(service.delete("D")).thenReturn(true);
+        mvc.perform(delete("/api/statut-rendezvous/D")).andExpect(status().isNoContent());
     }
 
-    @Test
-    @DisplayName("DELETE /api/statuts-rendezvous/{code} ➔ 404 if not found")
+    @Test @DisplayName("DELETE /api/statut-rendezvous/{code} ➔ 404")
     void testDeleteNotFound() throws Exception {
-        Mockito.when(statutRepo.existsById("H")).thenReturn(false);
-
-        mvc.perform(delete("/api/statuts-rendezvous/H"))
-                .andExpect(status().isNotFound());
+        Mockito.when(service.delete("Y")).thenReturn(false);
+        mvc.perform(delete("/api/statut-rendezvous/Y")).andExpect(status().isNotFound());
     }
 }
